--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
