--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - 14.15.1
+  - 14
 
 cache:
   directories:
@@ -10,6 +10,13 @@ cache:
 install:
   - cd client
   - npm i
+  - cd ..
+  - cd server
+  - npm i
 
 script:
+  - npm run lint
+  - cd ..
+  - cd client
+  - npm run lint
   - npm run build
