Add nginx proxy pass to backend & docker-compose

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ FROM node:14-alpine
 WORKDIR /app
 
 # Copy package.json before copying contents of project
-COPY package.json .
+COPY package*.json ./
 
 # Install dependencies from package.json
 RUN npm install
