--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,5 +1,14 @@
+upstream backendServer {
+	# In docker-compose file, we name the backend container 'server', so use that instead of 'localhost'
+	server server:5000;
+}
+
 server {
 	listen 3000;
+
+	location /api {
+		proxy_pass http://backendServer;
+	}
 
 	location / {
 		# Root directory
