update copy statements in dockerfiles to wildcard

--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -3,8 +3,7 @@
 # Stage 1: Build React app to static HTML CSS JS
 FROM node:14-alpine as build
 WORKDIR /app
-COPY package.json .
-COPY package-lock.json .
+COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
